unpackaged/main/default/objects/ERS_Payment__c/fields/Reimbursement_ID__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reimbursement ID</label>
    <referenceTo>ACG_Reimbursement__c</referenceTo>
    <relationshipLabel>ERS Payments</relationshipLabel>
    <relationshipName>ERS_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>