unpackaged/main/default/objects/ERS_Payment__c/fields/Res__c.field-meta.xml
<CustomField>
    <fullName>Res__c</fullName>
    <formula>TEXT(Work_Order__r.Resolution_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Res</label>
    <type>Text</type>
</CustomField>