unpackaged/main/default/objects/ERS_Payment__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <label>Drvr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>