unpackaged/main/default/objects/ERS_Payment__c/fields/Special_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Special_Equipment__c</fullName>
    <label>Special Equipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>