unpackaged/main/default/objects/ERS_Payment__c/fields/Special_Member__c.field-meta.xml
<CustomField>
    <fullName>Special_Member__c</fullName>
    <label>Special Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA Flex</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>