unpackaged/main/default/objects/ERS_Payment__c/fields/State_Text__c.field-meta.xml
<CustomField>
    <fullName>State_Text__c</fullName>
    <label>State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>