unpackaged/main/default/objects/ERS_Payment__c/fields/Storage_Fees__c.field-meta.xml
<CustomField>
    <fullName>Storage_Fees__c</fullName>
    <label>Storage Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>