unpackaged/main/default/objects/ERS_Payment__c/fields/Svc_Club__c.field-meta.xml
<CustomField>
    <fullName>Svc_Club__c</fullName>
    <label>Svc Club</label>
    <length>3</length>
    <type>Text</type>
</CustomField>