unpackaged/main/default/objects/ERS_Payment__c/fields/T_Code__c.field-meta.xml
<CustomField>
    <fullName>T_Code__c</fullName>
    <label>T1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>