unpackaged/main/default/objects/ERS_Payment__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>ERS_Payment_Line_Item__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>ERS_Payment_Line_Item__c.Payment_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>