unpackaged/main/default/objects/ERS_Payment__c/fields/Total_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Amount__c</fullName>
    <formula>if( RecordType.Name == &#39;Facility Adjustment&#39;, FA_Payment_Amount__c,if(RecordType.Name == &#39;Call Adjustment&#39;, Total_Amount__c,if(RecordType.Name == &#39;Call&#39;, Total_Amount__c,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>