unpackaged/main/default/objects/ERS_Payment__c/fields/Tow_City__c.field-meta.xml
<CustomField>
    <fullName>Tow_City__c</fullName>
    <label>Tow City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>