unpackaged/main/default/objects/ERS_Payment__c/fields/Tow_Cross__c.field-meta.xml
<CustomField>
    <fullName>Tow_Cross__c</fullName>
    <label>Tow Cross</label>
    <length>255</length>
    <type>Text</type>
</CustomField>