unpackaged/main/default/objects/ERS_Payment__c/fields/Tow_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Tow_Latitude__c</fullName>
    <label>Tow Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>