unpackaged/main/default/objects/ERS_Payment__c/fields/Tow_Street__c.field-meta.xml
<CustomField>
    <fullName>Tow_Street__c</fullName>
    <label>Tow Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>