unpackaged/main/default/objects/ERS_Payment__c/fields/Truck_Id__c.field-meta.xml
<CustomField>
    <fullName>Truck_Id__c</fullName>
    <label>Trk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>