unpackaged/main/default/objects/ERS_Payment__c/fields/Vehicle_State__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_State__c</fullName>
    <label>Vehicle State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACG_States</valueSetName>
    </valueSet>
</CustomField>