unpackaged/main/default/objects/ERS_Payment__c/fields/Vehicle_State_Text__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_State_Text__c</fullName>
    <label>Vehicle State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>