unpackaged/main/default/objects/ERS_Payment__c/fields/Vehicle_Tag__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Tag__c</fullName>
    <label>Vehicle Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>