unpackaged/main/default/objects/ERS_Payment__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>ERS Payments</relationshipLabel>
    <relationshipName>ERS_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>