unpackaged/main/default/objects/ERS_Payment__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>ERS Payments</relationshipLabel>
    <relationshipName>ERS_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>