unpackaged/main/default/objects/ERS_Payment__c/recordTypes/Call_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Call_Adjustment</fullName>
    <active>true</active>
    <label>Call Adjustment</label>
</RecordType>