unpackaged/main/default/objects/ERS_Payment__c/recordTypes/Call_Payment.recordType-meta.xml
<RecordType>
    <fullName>Call_Payment</fullName>
    <active>true</active>
    <label>Call</label>
</RecordType>