unpackaged/main/default/objects/ERS_Payment__c/recordTypes/Reimbursement_Payment.recordType-meta.xml
<RecordType>
    <fullName>Reimbursement_Payment</fullName>
    <active>true</active>
    <label>Reimbursement Payment</label>
</RecordType>