unpackaged/main/default/objects/ERS_Payment__c/validationRules/Payment_Processed_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Processed_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR( RecordType.DeveloperName = &#39;Call_Payment&#39;,
     RecordType.DeveloperName = &#39;Call_Adjustment&#39;
    ),
    ISPICKVAL(PRIORVALUE(Status__c), &#39;Payment Processed&#39;)
)</errorConditionFormula>
    <errorMessage>Payment Processed. This Payment can no longer be updated.</errorMessage>
</ValidationRule>